--- a/lib/templates/_case_search_form.html
+++ b/lib/templates/_case_search_form.html
@@ -40,13 +40,13 @@
           <label>Type of interaction</label>
              {% for tag in tags.interaction_type.tags %}
               <input type="checkbox" name="tags" id="{{ tag|lower|replace(' ', '-') }}" value="{{ tag|lower }}">
-                <label for="{{ tag|lower|replace(' ', '-') }}" class="option">{{ tag }}</label>
+                <label for="{{ tag|lower|replace(' ', '-') }}" class="option"><span>{{ tag }}</span></label>
              {% endfor %}
 
           <label>Type of misconduct</label>
              {% for tag in tags.misconduct_type.tags %}
               <input type="checkbox" name="tags" id="{{ tag|lower|replace(' ', '-') }}" value="{{ tag|lower }}">
-                <label for="{{ tag|lower|replace(' ', '-') }}" class="option">{{ tag }}</label>
+                <label for="{{ tag|lower|replace(' ', '-') }}" class="option"><span>{{ tag }}</span></label>
              {% endfor %}
         </div>
 
@@ -54,26 +54,30 @@
           <label>Outcome</label>
            {% for tag in tags.outcome.tags %}
             <input type="checkbox" name="tags" id="{{ tag|lower|replace(' ', '-') }}" value="{{ tag|lower }}">
-              <label for="{{ tag|lower|replace(' ', '-') }}" class="option">{{ tag }}</label>
+              <label for="{{ tag|lower|replace(' ', '-') }}" class="option"><span>{{ tag }}</span></label>
            {% endfor %}
 
           <label>Type of weapon</label>
            {% for tag in tags.weapons_used.tags %}
             <input type="checkbox" name="tags" id="{{ tag|lower|replace(' ', '-') }}" value="{{ tag|lower }}">
-              <label for="{{ tag|lower|replace(' ', '-') }}" class="option">{{ tag }}</label>
+              <label for="{{ tag|lower|replace(' ', '-') }}" class="option"><span>{{ tag }}</span></label>
            {% endfor %}
 
           <label>Plaintiff details</label>
           {% for tag in tags.victims_tags.tags %}
             <input type="checkbox" name="tags" id="{{ tag|lower|replace(' ', '-') }}" value="{{ tag|lower }}">
-              <label for="{{ tag|lower|replace(' ', '-') }}" class="option">{{ tag }}</label>
+              {% if tag == 'LGBT' %}
+                <label for="{{ tag|lower|replace(' ', '-') }}" class="option caps"><span>{{ tag }}</span></label>
+              {% else %}
+                <label for="{{ tag|lower|replace(' ', '-') }}" class="option"><span>{{ tag }}</span></label>
+              {% endif %}
            {% endfor %}
 
 
           <label>Officer details</label>
           {% for tag in tags.officers_tags.tags %}
             <input type="checkbox" name="tags" id="{{ tag|lower|replace(' ', '-') }}" value="{{ tag|lower }}">
-              <label for="{{ tag|lower|replace(' ', '-') }}" class="option">{{ tag }}</label>
+              <label for="{{ tag|lower|replace(' ', '-') }}" class="option"><span>{{ tag }}</span></label>
            {% endfor %}
         </div>
 
