--- a/templates/_case_search_form.html
+++ b/templates/_case_search_form.html
@@ -262,73 +262,73 @@
           <label>Type of interaction</label>
              
               <input type="checkbox" name="tags" id="home-invasion" value="home invasion">
-                <label for="home-invasion" class="option">Home invasion</label>
+                <label for="home-invasion" class="option"><span>Home invasion</span></label>
              
               <input type="checkbox" name="tags" id="protest" value="protest">
-                <label for="protest" class="option">Protest</label>
+                <label for="protest" class="option"><span>Protest</span></label>
              
               <input type="checkbox" name="tags" id="stop-and-frisk" value="stop and frisk">
-                <label for="stop-and-frisk" class="option">Stop and frisk</label>
+                <label for="stop-and-frisk" class="option"><span>Stop and frisk</span></label>
              
               <input type="checkbox" name="tags" id="traffic-stop" value="traffic stop">
-                <label for="traffic-stop" class="option">Traffic stop</label>
+                <label for="traffic-stop" class="option"><span>Traffic stop</span></label>
              
               <input type="checkbox" name="tags" id="strip-search" value="strip search">
-                <label for="strip-search" class="option">Strip search</label>
+                <label for="strip-search" class="option"><span>Strip search</span></label>
              
               <input type="checkbox" name="tags" id="lock-up" value="lock-up">
-                <label for="lock-up" class="option">Lock-up</label>
+                <label for="lock-up" class="option"><span>Lock-up</span></label>
              
 
           <label>Type of misconduct</label>
              
               <input type="checkbox" name="tags" id="false-report" value="false report">
-                <label for="false-report" class="option">False report</label>
+                <label for="false-report" class="option"><span>False report</span></label>
              
               <input type="checkbox" name="tags" id="shooting" value="shooting">
-                <label for="shooting" class="option">Shooting</label>
+                <label for="shooting" class="option"><span>Shooting</span></label>
              
               <input type="checkbox" name="tags" id="torture" value="torture">
-                <label for="torture" class="option">Torture</label>
+                <label for="torture" class="option"><span>Torture</span></label>
              
               <input type="checkbox" name="tags" id="damage-to-property" value="damage to property">
-                <label for="damage-to-property" class="option">Damage to property</label>
+                <label for="damage-to-property" class="option"><span>Damage to property</span></label>
              
               <input type="checkbox" name="tags" id="racial-epithets" value="racial epithets">
-                <label for="racial-epithets" class="option">Racial epithets</label>
+                <label for="racial-epithets" class="option"><span>Racial epithets</span></label>
              
               <input type="checkbox" name="tags" id="legal-access-denied" value="legal access denied">
-                <label for="legal-access-denied" class="option">Legal access denied</label>
+                <label for="legal-access-denied" class="option"><span>Legal access denied</span></label>
              
               <input type="checkbox" name="tags" id="retaliation" value="retaliation">
-                <label for="retaliation" class="option">Retaliation</label>
+                <label for="retaliation" class="option"><span>Retaliation</span></label>
              
               <input type="checkbox" name="tags" id="threats/intimidation" value="threats/intimidation">
-                <label for="threats/intimidation" class="option">Threats/intimidation</label>
+                <label for="threats/intimidation" class="option"><span>Threats/intimidation</span></label>
              
               <input type="checkbox" name="tags" id="bribery" value="bribery">
-                <label for="bribery" class="option">Bribery</label>
+                <label for="bribery" class="option"><span>Bribery</span></label>
              
               <input type="checkbox" name="tags" id="excessive-force" value="excessive force">
-                <label for="excessive-force" class="option">Excessive force</label>
+                <label for="excessive-force" class="option"><span>Excessive force</span></label>
              
               <input type="checkbox" name="tags" id="destroy/conceal/fabricate-evidence" value="destroy/conceal/fabricate evidence">
-                <label for="destroy/conceal/fabricate-evidence" class="option">Destroy/conceal/fabricate evidence</label>
+                <label for="destroy/conceal/fabricate-evidence" class="option"><span>Destroy/conceal/fabricate evidence</span></label>
              
               <input type="checkbox" name="tags" id="strip-search" value="strip search">
-                <label for="strip-search" class="option">Strip search</label>
+                <label for="strip-search" class="option"><span>Strip search</span></label>
              
               <input type="checkbox" name="tags" id="stolen-property" value="stolen property">
-                <label for="stolen-property" class="option">Stolen property</label>
+                <label for="stolen-property" class="option"><span>Stolen property</span></label>
              
               <input type="checkbox" name="tags" id="witness-manipulation" value="witness manipulation">
-                <label for="witness-manipulation" class="option">Witness manipulation</label>
+                <label for="witness-manipulation" class="option"><span>Witness manipulation</span></label>
              
               <input type="checkbox" name="tags" id="forced-confession" value="forced confession">
-                <label for="forced-confession" class="option">Forced confession</label>
+                <label for="forced-confession" class="option"><span>Forced confession</span></label>
              
               <input type="checkbox" name="tags" id="sexual-harassment/abuse" value="sexual harassment/abuse">
-                <label for="sexual-harassment/abuse" class="option">Sexual harassment/abuse</label>
+                <label for="sexual-harassment/abuse" class="option"><span>Sexual harassment/abuse</span></label>
              
         </div>
 
@@ -336,95 +336,111 @@
           <label>Outcome</label>
            
             <input type="checkbox" name="tags" id="weapons-charges" value="weapons charges">
-              <label for="weapons-charges" class="option">Weapons charges</label>
+              <label for="weapons-charges" class="option"><span>Weapons charges</span></label>
            
             <input type="checkbox" name="tags" id="hospitalized" value="hospitalized">
-              <label for="hospitalized" class="option">Hospitalized</label>
+              <label for="hospitalized" class="option"><span>Hospitalized</span></label>
            
             <input type="checkbox" name="tags" id="resisting-or-obstructing-arrest-charges" value="resisting or obstructing arrest charges">
-              <label for="resisting-or-obstructing-arrest-charges" class="option">Resisting or obstructing arrest charges</label>
+              <label for="resisting-or-obstructing-arrest-charges" class="option"><span>Resisting or obstructing arrest charges</span></label>
            
             <input type="checkbox" name="tags" id="other-charges-filed" value="other charges filed">
-              <label for="other-charges-filed" class="option">Other charges filed</label>
+              <label for="other-charges-filed" class="option"><span>Other charges filed</span></label>
            
             <input type="checkbox" name="tags" id="died-in-custody" value="died in custody">
-              <label for="died-in-custody" class="option">Died in custody</label>
+              <label for="died-in-custody" class="option"><span>Died in custody</span></label>
            
             <input type="checkbox" name="tags" id="drug-charges" value="drug charges">
-              <label for="drug-charges" class="option">Drug charges</label>
+              <label for="drug-charges" class="option"><span>Drug charges</span></label>
            
             <input type="checkbox" name="tags" id="assault-or-battery-to-an-officer-charges" value="assault or battery to an officer charges">
-              <label for="assault-or-battery-to-an-officer-charges" class="option">Assault or battery to an officer charges</label>
+              <label for="assault-or-battery-to-an-officer-charges" class="option"><span>Assault or battery to an officer charges</span></label>
            
             <input type="checkbox" name="tags" id="killed-by-officer" value="killed by officer">
-              <label for="killed-by-officer" class="option">Killed by officer</label>
+              <label for="killed-by-officer" class="option"><span>Killed by officer</span></label>
            
             <input type="checkbox" name="tags" id="died-out-of-custody" value="died out of custody">
-              <label for="died-out-of-custody" class="option">Died out of custody</label>
+              <label for="died-out-of-custody" class="option"><span>Died out of custody</span></label>
            
 
           <label>Type of weapon</label>
            
             <input type="checkbox" name="tags" id="nightstick" value="nightstick">
-              <label for="nightstick" class="option">Nightstick</label>
+              <label for="nightstick" class="option"><span>Nightstick</span></label>
            
             <input type="checkbox" name="tags" id="pepper-spray" value="pepper spray">
-              <label for="pepper-spray" class="option">Pepper spray</label>
+              <label for="pepper-spray" class="option"><span>Pepper spray</span></label>
            
             <input type="checkbox" name="tags" id="taser" value="taser">
-              <label for="taser" class="option">Taser</label>
+              <label for="taser" class="option"><span>Taser</span></label>
            
             <input type="checkbox" name="tags" id="gun" value="gun">
-              <label for="gun" class="option">Gun</label>
+              <label for="gun" class="option"><span>Gun</span></label>
            
             <input type="checkbox" name="tags" id="physical-force" value="physical force">
-              <label for="physical-force" class="option">Physical force</label>
+              <label for="physical-force" class="option"><span>Physical force</span></label>
            
             <input type="checkbox" name="tags" id="hog-tied" value="hog-tied">
-              <label for="hog-tied" class="option">Hog-tied</label>
+              <label for="hog-tied" class="option"><span>Hog-tied</span></label>
            
 
           <label>Plaintiff details</label>
           
             <input type="checkbox" name="tags" id="pregnant" value="pregnant">
-              <label for="pregnant" class="option">Pregnant</label>
+              
+                <label for="pregnant" class="option"><span>Pregnant</span></label>
+              
            
             <input type="checkbox" name="tags" id="lgbt" value="lgbt">
-              <label for="lgbt" class="option">LGBT</label>
+              
+                <label for="lgbt" class="option caps"><span>LGBT</span></label>
+              
            
             <input type="checkbox" name="tags" id="muslim" value="muslim">
-              <label for="muslim" class="option">Muslim</label>
+              
+                <label for="muslim" class="option"><span>Muslim</span></label>
+              
            
             <input type="checkbox" name="tags" id="elderly" value="elderly">
-              <label for="elderly" class="option">Elderly</label>
+              
+                <label for="elderly" class="option"><span>Elderly</span></label>
+              
            
             <input type="checkbox" name="tags" id="mental-illness" value="mental illness">
-              <label for="mental-illness" class="option">Mental Illness</label>
+              
+                <label for="mental-illness" class="option"><span>Mental Illness</span></label>
+              
            
             <input type="checkbox" name="tags" id="physical-disability" value="physical disability">
-              <label for="physical-disability" class="option">Physical disability</label>
+              
+                <label for="physical-disability" class="option"><span>Physical disability</span></label>
+              
            
             <input type="checkbox" name="tags" id="pets" value="pets">
-              <label for="pets" class="option">Pets</label>
+              
+                <label for="pets" class="option"><span>Pets</span></label>
+              
            
             <input type="checkbox" name="tags" id="minor" value="minor">
-              <label for="minor" class="option">Minor</label>
+              
+                <label for="minor" class="option"><span>Minor</span></label>
+              
            
 
 
           <label>Officer details</label>
           
             <input type="checkbox" name="tags" id="plainclothes" value="plainclothes">
-              <label for="plainclothes" class="option">Plainclothes</label>
+              <label for="plainclothes" class="option"><span>Plainclothes</span></label>
            
             <input type="checkbox" name="tags" id="off-duty" value="off duty">
-              <label for="off-duty" class="option">Off duty</label>
+              <label for="off-duty" class="option"><span>Off duty</span></label>
            
             <input type="checkbox" name="tags" id="under-the-influence" value="under the influence">
-              <label for="under-the-influence" class="option">Under the influence</label>
+              <label for="under-the-influence" class="option"><span>Under the influence</span></label>
            
             <input type="checkbox" name="tags" id="later-charged" value="later charged">
-              <label for="later-charged" class="option">Later charged</label>
+              <label for="later-charged" class="option"><span>Later charged</span></label>
            
         </div>
 
