--- a/less/style.less
+++ b/less/style.less
@@ -363,17 +363,50 @@ label {
     display: inline-block;
     text-transform: lowercase;
     font-weight: normal;
-    padding: 4px 6px;        
+    padding: 4px 6px;   
+    margin:0 1px 0 0;     
     background-color: fade(@cr-darkest,50%);
     color:fade(@cr-lightest,90%);
     border:1px solid transparent;
     line-height: 1;
     font-size:1em;
+    overflow: hidden;
+    
+    /* To make the width of the container exact. */
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+
+    &.caps {
+      text-transform: uppercase;
+    }
+
+    span {
+      white-space: nowrap;
+      position: relative;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      display:block;
+      line-height:1.3;
+
+      /* Starting transition */    
+      left: 0%;
+      width: 100%;
+
+      -webkit-transition: left .5s, width .5s;
+      -moz-transition: left .5s, width .5s;
+      transition: left .5s, width .5s;
+    }
 
     &:hover {
       cursor:pointer;
       background-color: @cr-darkest;
       color:@cr-lightest;
+
+      // span {
+      //   left: -100%;
+      //   width: 200%;
+      // }
     }
 
     i {
@@ -880,7 +913,7 @@ label.results-label {
       position:relative;
 
       h1 {
-        margin-top: 0;
+        margin-top: 30px;
         text-transform: uppercase;
         font-size: 1.1em;
         color: #fff;
@@ -892,6 +925,7 @@ label.results-label {
       }
       h3 {
         color:@cr-alert;
+        text-transform: uppercase;
         font-size:2em;
         font-family:'Open Sans';
         font-weight:300;
@@ -900,14 +934,22 @@ label.results-label {
     }
     .secondary-details {
       //background-color:fade(@cr-darkest,40%);
-      background-color: @cr-grey;
-      padding:20px;
+      background-color: #000;
+      padding: 20px 0 0 0;
       text-align: center;
 
       .tags {
-        color:darken(@cr-dark,30%);
         text-transform: lowercase;
         margin-bottom:0;
+      }
+      span.display-tag {
+        background-color: lighten(@cr-darkest,30%);
+        color: @cr-lightest;
+        opacity: .8;
+        padding: 4px 6px;
+        line-height: 1.3;
+        display: inline-block;
+        margin: 3px;
       }
     }
     .card-label {
@@ -1215,21 +1257,25 @@ a:hover {
   width: 1.5em;
   height: 1.5em;
   margin:.5em;
-  transition: background-color .25s ease-in-out;
-  -moz-transition: background-color .25s ease-in-out;
-  -webkit-transition: background-color .25s ease-in-out;
+  transition: background-color .25s ease-in-out, color .25s ease-in-out;
+  -moz-transition: background-color .25s ease-in-out, color .25s ease-in-out;
+  -webkit-transition: background-color .25s ease-in-out, color .25s ease-in-out;
   &:hover {
     cursor:pointer;
   }
 }
 #cpd-scrolling .social-icons {
   font-size:.333em;
+  top: auto;
+  left: 0;
+
   a, a:visited {
     color:@cr-highlight;
   }
 }
 #cpd-scrolling .share {
-  background-color: fade(@cr-lightest,30%);
+  background-color: fade(@cr-lightest,50%);
+  color:@cr-darkest;
   text-align: center;
   padding-top: .45em;
   border-radius: 1em;
@@ -1237,6 +1283,7 @@ a:hover {
   height:2em;
   &:hover {
     background-color: @cr-lightest;
+    color:@cr-highlight;
   }
 }
 .icon-twitter:before {
@@ -1275,6 +1322,7 @@ a:hover {
     bottom: 0;
     left: 0;
     right: 0;
+    display:none;
   }
   .share {
     margin: 0 .25em;
@@ -1287,6 +1335,12 @@ a:hover {
   }
   .icon-twitter {
     font-size:1.75rem;
+  }
+}
+
+.case:hover {
+   .case-payment-wrapper .social-icons {
+    display:inline-block;
   }
 }
 
@@ -1426,9 +1480,20 @@ Intro Page
     z-index: 9999999;
     padding-top: 62px;
   }
-  #cpd-progress>div {
+  .rect-wrap {
     display:block;
     min-width:100%;
+
+    .rect {
+      width:61px;
+      height:0;
+      background-color:@cr-alert;
+      margin-bottom: 62px;
+      opacity: .6;
+      transition: opacity .25s ease-in-out;
+      -moz-transition: opacity .25s ease-in-out;
+      -webkit-transition: opacity .25s ease-in-out;
+    }
 
     .down {
       width: 0;
@@ -1436,7 +1501,10 @@ Intro Page
       border-style: solid;
       border-width: 16px 30px 0 30px;
       border-color: @cr-alert transparent transparent transparent;
-      opacity:.5;
+      opacity:.6;
+      transition: opacity .25s ease-in-out;
+      -moz-transition: opacity .25s ease-in-out;
+      -webkit-transition: opacity .25s ease-in-out;
       display: block;
       margin: -62px 0 0 0;
 
@@ -1456,19 +1524,21 @@ Intro Page
       width: 62px;
       opacity: .8;
       text-align: center;
-      display: inline-block;
       font-family: 'Open Sans Condensed';
       text-transform: uppercase;
       text-shadow: 0 0 1px #000;
       line-height: 1;
+      display:none;
     }
-  }
-  #cpd-progress .rect {
-    width:61px;
-    height:0;
-    background-color:@cr-alert;
-    margin-bottom: 62px;
-    opacity: .5;
+
+    &:hover {
+      .rect, .down {
+        opacity:.8;
+      }
+      .scroll {
+        display:inline-block;
+      }
+    }
   }
 
   /*
