--- a/templates/_results_templates.html
+++ b/templates/_results_templates.html
@@ -88,6 +88,7 @@
 <script type="text/tmpl" id="case-search-statement-tmpl">
   <% var checkboxes = $('input[type=checkbox]:checked'); cblength = checkboxes.length; %> 
   <% var primary_cause = $('#primary_cause').val().replace(/ /g, '\u00a0').toLowerCase(); %> 
+  <% if (('illinois').indexOf(primary_cause)) { primary_cause = primary_cause.replace('illinois', 'Illinois');} %>
   <% var payment_amount = $('#payment_amount').val() %>
   <div class="filter-statement">
   <span class="number-of-incidents"><%= incidents %> </span>
@@ -116,7 +117,11 @@
       <% } %>
       tagged 
       <% _.each(checkboxes, function(tag, i) { %>
-        <span class="clickable tag" data-val="<% print($(tag).val()) %>"><% print($(tag).val()) %>
+        <% if ( $(tag).val() == "lgbt") { %> 
+          <span class="clickable tag" data-val="<% print($(tag).val()) %>"><% print($(tag).val().toUpperCase()) %>
+        <% } else { %>
+          <span class="clickable tag" data-val="<% print($(tag).val()) %>"><% print($(tag).val()) %>
+        <% } %>
         <% if ( i > -1 && i < cblength-1 && i != cblength-2) { %> 
           , <span class="x">x</span></span>&nbsp;
         <% } %>
@@ -131,7 +136,11 @@
 
       &mdash; tagged 
       <% _.each(checkboxes, function(tag, i) { %>
-        <span class="clickable tag" data-val="<% print($(tag).val()) %>"><% print($(tag).val()) %>
+        <% if ( $(tag).val() == "lgbt") { %> 
+          <span class="clickable tag" data-val="<% print($(tag).val()) %>"><% print($(tag).val().toUpperCase()) %>
+        <% } else { %>
+          <span class="clickable tag" data-val="<% print($(tag).val()) %>"><% print($(tag).val()) %>
+        <% } %>
         <% if ( i > -1 && i < cblength-1 && i != cblength-2) { %> 
           ,<span class="x">x</span></span>&nbsp; 
         <% } %>
