logic for unnamed officers

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,9 @@ a:hover {
   color: #3d9999;
   text-decoration: underline;
 }
+p.reversed {
+  color: #ffffff;
+}
 /* ==========================================================================
 Navigation               
 ========================================================================== */
