--- a/less/style.less
+++ b/less/style.less
@@ -49,6 +49,10 @@ a {
   }
 }
 
+p.reversed {
+  color:@cr-lightest;
+}
+
 /* ==========================================================================
 Navigation               
 ========================================================================== */
